Disable mode squashing, fix bug with blank lines, fix bug with scrollback, add date change support

--- a/design.css
+++ b/design.css
@@ -578,3 +578,28 @@ body div.line[ltype=action][highlight=true] {
   font-weight: normal;
   background-color: #30473a;
 }
+
+/* Date changes */
+body div.date {
+    display: flex;
+    display: -webkit-flex;
+    padding: .5em 0;
+}
+
+body div.date > hr {
+    background: #444;
+    border: 0;
+    flex: 1;
+    height: 1px;
+    margin-top: .6em;
+    -webkit-flex: 1;
+}
+
+body div.date > span {
+    font-style: oblique;
+    margin: 0 1em;
+}
+
+body div.date + div#mark {
+  display: none;
+}
